# max-mcp

./: pyproject.toml
docs/: planning.md  project-breakdown.md
