[project]
name = "max-mcp"
version = "0.1.0"
description = "Autonomous MCP Agent for building software"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
